# transformer-mixture-of-expert-implementation

./: .gitignore  README.md  pyproject.toml
configs/: tiny_inference.json
docs/: day01_to_day07_checklist.md  project_01_combined_assignment_roadmap.md  project_01_scope.md
notebooks/: assignment_transformer_moe.ipynb
notebooks/readings/: 00_reading_index.ipynb  day_01_orientation_shapes_embeddings_loss.ipynb  day_02_causal_attention_manual_core.ipynb  day_03_modern_decoder_block.ipynb  day_04_training_loop_tiny_overfit.ipynb  day_05_generation_sampling_moe.ipynb  day_06_kv_cache_prefill_decode.ipynb  day_07_benchmark_report_portfolio_gate.ipynb
reports/: transformer_inference_report.md
scripts/: download_tinystories.py  generate.py  generate_figures.py  train_dense.py  train_moe.py  train_tokenizer.py
src/moe_transformer_lab/: __init__.py  config.py
src/moe_transformer_lab/manual/: __init__.py  attention.py  layers.py  transformer.py
src/moe_transformer_lab/trainable/: __init__.py  data.py  model.py  tokenizer.py  train_utils.py
tests/: test_checkpoint.py  test_config.py  test_manual_attention.py  test_manual_layers.py  test_notebook_assets.py  test_swappable_ffn.py  test_tiny_overfit.py
